--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>tmlib.js test</title>
+  <title>Line</title>
   <script src="lib/tmlib.min.js"></script>
   <script src="lib/fade.tm.js"></script>
 
